# CS7DS2---Optimization-Algorithms-for-ML

./: .gitignore  <F1>  pyproject.toml
final/: final.py
week2/: week2.py  week2_part1.py  week2_part2.py
week4/: week4.py
week6/: week6.py
week8/: main.py  pyproject.toml  week8.py
